Fixin' LeaveEmailBeforePayingPopup.js style problem on Safari (5)

--- a/book-store-frontend/src/components/leave-email-before-paying-popup/LeaveEmailBeforePayingPopup.css
+++ b/book-store-frontend/src/components/leave-email-before-paying-popup/LeaveEmailBeforePayingPopup.css
@@ -3,8 +3,7 @@
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: #000;
-    opacity: .35;
+    background-color: rgba(0,0,0,.35);
 }
 
 .leave-email-before-paying-popup-subcontainer {
